# referrals-task

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  dump.rdb  pyproject.toml
app/: .env.example  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_04_1412-c7e7000a38fb_initial_tables.py  2025_03_04_1519-93089ee6d13f_initial_tables.py  2025_03_07_1653-33818a83725b_update_tables.py  2025_03_07_1655-4c3a056a45e6_update_tables.py  2025_03_09_1716-a64c945dcac5_add_active.py  2025_03_10_1342-e70536cd1f09_add_timezone.py  2025_03_10_1450-e87e49ad0de2_owner_has_many_refcodes.py  2025_03_12_1428-2646a824dafb_referral_code_update.py  2025_03_12_2211-8c234503b7ec_check.py  2025_03_12_2215-eb4e77178bb1_add_selectin.py  2025_03_12_2228-0f965d9a7fa7_add_collection_class.py  2025_03_12_2334-cf0227b5985f_add___init__.py  2025_03_12_2338-0ef96aa0ad7c_add_collection_class.py  2025_03_12_2354-c0ce1635893c_foreigh_key.py  2025_03_13_0022-b15788a16b7a_as_it_was.py  2025_03_13_0027-f329ccc4f7c0_change_user.py  2025_03_13_1517-d309db21c86f_change_code.py
app/api/: dependencies.py  endpoints.py
app/core/: redis.py  security.py  settings.py
app/db/: session.py
app/models/: __init__.py  referral_code.py  user.py
app/schemas/: auth.py  referral_code.py  user.py
app/services/: referral_code_service.py  user_service.py
